gcc/testsuite/rust/rustc/ui/parser/keyword-typeof.rs
fn main() {
    let typeof = (); // { dg-error "" "" { target *-*-* } }
}

